--- a/KalanSageFront/k-admin/src/app/pages/2-abonnement/abonnement.component.html
+++ b/KalanSageFront/k-admin/src/app/pages/2-abonnement/abonnement.component.html
@@ -1,119 +1,93 @@
 <div class="card-container">
-  <!--  -->
+  <!-- Most Subscribed Abonnement -->
   <mat-card class="blue-card">
     <mat-card-content>
       <div class="content">
         <h2 class="title">Abonnement</h2>
-        <h3 class="price">$250/m</h3>
+        <h3 class="price">{{ mostSubscribedAbonnement?.prix }}/m</h3>
         <img src="assets/eiffel-icon.png" alt="Eiffel Tower" class="eiffel-icon" />
       </div>
     </mat-card-content>
   </mat-card>
 
-  <!--  -->
+  <!-- Abonnement Count -->
   <mat-card class="white-card">
     <mat-card-content>
       <div class="count-container">
-        <h1 class="count">150</h1>
+        <h1 class="count">{{ abonnementCount }}</h1>
         <p class="description">Abonnements</p>
       </div>
     </mat-card-content>
   </mat-card>
 </div>
 
-
+<!-- List of Abonnement Users -->
 <mat-card class="smallCardWithShadow">
-  <!--  -->
   <div class="table-responsive">
     <table mat-table [dataSource]="dataSource1" class="w-100">
-      <!--  -->
+      <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12 p-l-0">ID</th>
-        <td mat-cell *matCellDef="let element" class="p-l-0">
-          <div class="d-flex align-items-center">
-            <div class="m-l-8">
-              <h6 class="mat-subtitle-1 f-s-12 f-w-500">{{ element.id }}</h6>
-            </div>
-          </div>
-        </td>
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let abonnement">{{ abonnement.id }}</td>
       </ng-container>
 
-      <!--  -->
+      <!-- Date Column -->
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12 p-l-0">Date</th>
-        <td mat-cell *matCellDef="let element" class="p-l-0">
-          <h6 class="mat-subtitle-1 f-s-12 f-w-500">{{ element.date }}</h6>
-        </td>
+        <th mat-header-cell *matHeaderCellDef>Date</th>
+        <td mat-cell *matCellDef="let abonnement">{{ abonnement.date }}</td>
       </ng-container>
 
-      <!---->
+      <!-- Client Column -->
       <ng-container matColumnDef="client">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12 p-l-0">Client</th>
-        <td mat-cell *matCellDef="let element" class="p-l-0">
-          <h6 class="mat-subtitle-1 f-s-12 f-w-500">{{ element.client }}</h6>
-        </td>
+        <th mat-header-cell *matHeaderCellDef>Client</th>
+        <td mat-cell *matCellDef="let abonnement">{{ abonnement.client }}</td>
       </ng-container>
-       <!--  -->
+
+      <!-- Abonnement Column -->
       <ng-container matColumnDef="abonnement">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12 p-l-0">Abonnement</th>
-        <td mat-cell *matCellDef="let element" class="p-l-0">
-          <h6 class="mat-subtitle-1 f-s-12 f-w-500">{{ element.uname }}</h6>
-        </td>
+        <th mat-header-cell *matHeaderCellDef>Abonnement</th>
+        <td mat-cell *matCellDef="let abonnement">{{ abonnement.typeAbonnement }}</td>
       </ng-container>
 
-      <!-- -->
+      <!-- Budget Column -->
       <ng-container matColumnDef="budget">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12">Montant</th>
-        <td mat-cell *matCellDef="let element" class="mat-body-1">
-          <div>
-            <h6 class="mat-body-1 f-s-12 m-b-4">
-              <span class="text-dark f-w-500">${{ element.budget }} </span>/ 499
-            </h6>
-            <span class="f-s-10 f-w-400 d-block m-b-4">
-              {{ element.budget >= 160 ? 'Payé' : element.budget > 119 ? 'Modtié' : 'Annuller' }}
-            </span>
-          </div>
-        </td>
+        <th mat-header-cell *matHeaderCellDef>Montant</th>
+        <td mat-cell *matCellDef="let abonnement">${{ abonnement.montant }}</td>
       </ng-container>
 
-      <!-- -->
+      <!-- Priority Column -->
       <ng-container matColumnDef="priority">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12">Status</th>
-        <td mat-cell *matCellDef="let element">
-          <span
-            [ngClass]="{
-              'bg-light-warning text-warning': element.priority === 'annuler',
-              'bg-light-error text-error': element.priority === 'en-cours',
-              'bg-light-success text-success': element.priority === 'confirmer'
-            }"
-            class="rounded f-w-500 p-4 p-y-2 f-s-10"
-          >
-            {{ element.priority | titlecase }}
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let abonnement">
+          <span [ngClass]="{
+              'bg-light-warning text-warning': abonnement.priority === 'annuler',
+              'bg-light-error text-error': abonnement.priority === 'en-cours',
+              'bg-light-success text-success': abonnement.priority === 'confirmer'
+            }" class="rounded f-w-500 p-4 p-y-2 f-s-10">
+            {{ abonnement.priority | titlecase }}
           </span>
         </td>
       </ng-container>
 
-      <!-- -->
+      <!-- Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef class="f-w-500 mat-subtitle-1 f-s-12"></th>
-        <td mat-cell *matCellDef="let element" class="mat-body-1">
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let abonnement">
+          <button mat-icon-button [matMenuTriggerFor]="menu">
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item>
-              <mat-icon>edit</mat-icon>
-              <!-- <span>Edit</span> -->
+              <mat-icon>edit</mat-icon> Edit
             </button>
             <button mat-menu-item>
-              <mat-icon>delete</mat-icon>
-              <!-- <span>Delete</span> -->
+              <mat-icon>delete</mat-icon> Delete
             </button>
           </mat-menu>
         </td>
       </ng-container>
 
-      <!--  -->
+      <!-- Table Headers and Rows -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
     </table>
