--- a/KalanSageFront/k-admin/src/app/pages/10-inbox/inbox-page.component.scss
+++ b/KalanSageFront/k-admin/src/app/pages/10-inbox/inbox-page.component.scss
@@ -119,91 +119,100 @@
       }
     }
   }
+}
+.chat-content-container {
+  width: 75%;
+  height: 85vh;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  overflow: hidden;
 
-  .chat-content-container {
-    width: 75%;
-    height: 85vh;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    overflow: hidden;
+  .chat-header {
+    padding-bottom: 5px;
+    border-bottom: 1px solid #e0e0e0;
+    margin-bottom: 5px;
+  }
 
-    .chat-header {
-      padding-bottom: 5px;
-      border-bottom: 1px solid #e0e0e0;
-      margin-bottom: 5px;
+  .chat-messages {
+    flex-grow: 1;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .chat-messages::-webkit-scrollbar {
+    display: none;
+  }
+
+  .message-item {
+    margin: 5px 0;
+    padding: 8px;
+    border-radius: 6px;
+    max-width: 60%;
+
+    &.sent {
+      background-color: #e0f7fa;
+      align-self: flex-end;
     }
 
-    .chat-messages {
-      flex-grow: 1;
-      overflow-y: auto;
-      scrollbar-width: none;
-      -ms-overflow-style: none;
+    .message-text {
+      margin: 0;
     }
 
-    .chat-messages::-webkit-scrollbar {
-      display: none;
-    }
-
-    .message-item {
-      margin: 5px 0;
-      padding: 8px;
-      border-radius: 6px;
-      max-width: 60%;
-
-      &.sent {
-        background-color: #e0f7fa;
-        align-self: flex-end;
-      }
-
-      .message-text {
-        margin: 0;
-      }
-
-      .message-time {
-        font-size: 10px;
-        color: #9e9e9e;
-        text-align: right;
-        margin-top: 3px;
-      }
-    }
-
-    .message-input-container {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      padding: 10px;
-      border-radius: 25px;
-      margin-top: 10px;
-
-      .message-input {
-        flex-grow: 1;
-
-        .mat-form-field-wrapper {
-          padding: 0;
-        }
-
-        .mat-form-field-outline {
-          border-radius: 25px;
-          border-color: transparent;
-        }
-
-        input {
-          color: #ffffff;
-        }
-
-        .icon {
-          color: #ffffff;
-          cursor: pointer;
-          margin: 0 5px;
-        }
-
-        .mat-icon.mat-prefix,
-        .mat-icon.mat-suffix {
-          margin: 0 10px;
-        }
-      }
+    .message-time {
+      font-size: 10px;
+      color: #9e9e9e;
+      text-align: right;
+      margin-top: 3px;
     }
   }
+}
+.message-input-container {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  width: 50%;
+  padding: 10px;
+  border-radius: 25px;
+  margin-top: 40px;
+  .message-input {
+    flex-grow: 1;
+
+    .mat-form-field-wrapper {
+      padding: 10px;
+    }
+
+    .mat-form-field-outline {
+      border-radius: 25px;
+      border-color: transparent;
+    }
+
+    input {
+      color: #ffffff;
+    }
+
+    .icon {
+      color: #ffffff;
+      cursor: pointer;
+      margin: 0 5px;
+    }
+
+    .mat-icon.mat-prefix,
+    .mat-icon.mat-suffix {
+      margin: 0 10px;
+    }
+  }
+}
+.messageInput{
+  display: flex;
+}
+.Right-Side {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 10px;
 }
