--- a/KalanSageFront/k-admin/src/app/pages/4-users/user.component.html
+++ b/KalanSageFront/k-admin/src/app/pages/4-users/user.component.html
@@ -1,28 +1,42 @@
 <div class="user-table-container smallCardWithShadow">
-  <!-- Filter Field -->
-  <div class="filter-container">
-    <mat-form-field appearance="outline">
-      <mat-label>Filtrer par</mat-label>
-      <mat-select (selectionChange)="applyFilter($event)">
-        <mat-option *ngFor="let status of statusList" [value]="status">{{ status }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
+  <!-- Search Bar -->
+  <div class="search-content">
+    <div class="search-container">
+      <mat-form-field appearance="outline">
+        <mat-label>Rechercher</mat-label>
+        <input
+          matInput
+          (keyup)="applySearchFilter($event)"
+          placeholder="Search by name, email, or role"
+        />
+      </mat-form-field>
+    </div>
 
+    <!-- Filter by Status Field -->
+    <div class="filter-container">
+      <mat-form-field appearance="outline">
+        <mat-label>Filtrer par statut</mat-label>
+        <mat-select (selectionChange)="applyStatusFilter($event)">
+          <mat-option *ngFor="let status of statusList" [value]="status">{{
+            status
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
   <!-- User Table -->
   <div class="table-responsive">
-    <table mat-table [dataSource]="filteredUsers" class="mat-elevation-z8">
-      
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
+      <ng-container matColumnDef="nom">
         <th mat-header-cell *matHeaderCellDef>Noms</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.nom }}</td>
       </ng-container>
 
       <!-- Surname Column -->
       <ng-container matColumnDef="surname">
         <th mat-header-cell *matHeaderCellDef>Prénoms</th>
-        <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.prenom }}</td>
       </ng-container>
 
       <!-- Email Column -->
@@ -31,21 +45,23 @@
         <td mat-cell *matCellDef="let element">{{ element.email }}</td>
       </ng-container>
 
-      <!-- Phone Column -->
+      <!-- Phone Column
       <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef>Téléphone</th>
         <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
-      </ng-container>
+      </ng-container> -->
 
       <!-- Status Column -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Statut</th>
         <td mat-cell *matCellDef="let element">
-          <span [ngClass]="getStatusClass(element.status)">{{ element.status }}</span>
+          <span [ngClass]="getStatusClass(element.status)">{{
+            element.status
+          }}</span>
         </td>
       </ng-container>
 
-     <!-- Actions Column -->
+      <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
@@ -62,8 +78,12 @@
               <span>Supprimer</span>
             </button>
             <button mat-menu-item (click)="toggleUserStatus(element)">
-              <mat-icon>{{ element.status === 'Actif' ? 'block' : 'check_circle' }}</mat-icon>
-              <span>{{ element.status === 'Actif' ? 'Désactiver' : 'Activer' }}</span>
+              <mat-icon>{{
+                element.status === "Actif" ? "block" : "check_circle"
+              }}</mat-icon>
+              <span>{{
+                element.status === "Actif" ? "Désactiver" : "Activer"
+              }}</span>
             </button>
           </mat-menu>
         </td>
@@ -76,5 +96,10 @@
   </div>
 
   <!-- Paginator -->
-  <mat-paginator [length]="users.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" aria-label="Select page"></mat-paginator>
+  <mat-paginator
+    [length]="dataSource.data.length"
+    [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Select page"
+  ></mat-paginator>
 </div>
