--- a/KalanSageFront/k-admin/src/app/pages/6-partenaire/partenaire.component.html
+++ b/KalanSageFront/k-admin/src/app/pages/6-partenaire/partenaire.component.html
@@ -1,59 +1,85 @@
- <mat-toolbar class="toolbar">
-    <span class="module-title">Liste des partenaires</span>
-    <span class="spacer"></span>
-    <button mat-raised-button color="primary" class="add-button" (click)="openCreateDialog()">
-      <mat-icon>add</mat-icon> Ajouter
-    </button>
-  </mat-toolbar>
-  <!--  -->
-  <div class="user-table-container smallCardWithShadow">
+<mat-toolbar class="toolbar">
+  <span class="module-title">Liste des partenaires</span>
+  <span class="spacer"></span>
+  <button
+    mat-raised-button
+    color="primary"
+    class="add-button"
+    (click)="openCreateDialog()"
+  >
+    <mat-icon>add</mat-icon> Ajouter
+  </button>
+</mat-toolbar>
+<!--  -->
+<div class="user-table-container smallCardWithShadow">
   <!-- Filter Field -->
   <div class="filter-container">
     <mat-form-field appearance="outline">
       <mat-label>Filtrer par</mat-label>
       <mat-select (selectionChange)="applyFilter($event)">
-        <mat-option *ngFor="let status of statusList" [value]="status">{{ status }}</mat-option>
+        <mat-option *ngFor="let status of statusList" [value]="status">{{
+          status
+        }}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 
-  <!-- User Table -->
+  <!-- Parteanire Table -->
   <div class="table-responsive">
-    <table mat-table [dataSource]="filteredUsers" class="mat-elevation-z8">
-      
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Noms</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- nom partenaire Column -->
+      <ng-container matColumnDef="nomPartenaire">
+        <th mat-header-cell *matHeaderCellDef>Parteanire</th>
+        <td mat-cell *matCellDef="let element">{{ element.nomPartenaire }}</td>
       </ng-container>
 
-      <!-- Surname Column -->
-      <ng-container matColumnDef="surname">
+      <!-- Date ajout Column 
+      <ng-container matColumnDef="dateAjoute">
         <th mat-header-cell *matHeaderCellDef>Prénoms</th>
-        <td mat-cell *matCellDef="let element">{{ element.surname }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.dateAjoute }}</td>
+      </ng-container>-->
+
+      <!-- Typde partenaire Column -->
+      <ng-container matColumnDef="typePartenaire">
+        <th mat-header-cell *matHeaderCellDef>typePartenaire</th>
+        <td mat-cell *matCellDef="let element">{{ element.typePartenaire }}</td>
       </ng-container>
 
+      <!-- Adresse Column -->
+      <ng-container matColumnDef="adresse">
+        <th mat-header-cell *matHeaderCellDef>Adresse</th>
+        <td mat-cell *matCellDef="let element">{{ element.adresse }}</td>
+      </ng-container>
       <!-- Email Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>E-mails</th>
-        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      <ng-container matColumnDef="emailContact">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.emailContact }}</td>
+      </ng-container>
+      <!-- Telephone Column -->
+      <ng-container matColumnDef="numeroContact">
+        <th mat-header-cell *matHeaderCellDef>Téléphone</th>
+        <td mat-cell *matCellDef="let element">{{ element.numeroContact }}</td>
       </ng-container>
 
-      <!-- Phone Column -->
-      <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef>Téléphone</th>
-        <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
+      <!-- Description Column -->
+      <ng-container matColumnDef="descriptionPartenariat">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.descriptionPartenariat }}
+        </td>
       </ng-container>
 
       <!-- Status Column -->
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Statut</th>
         <td mat-cell *matCellDef="let element">
-          <span [ngClass]="getStatusClass(element.status)">{{ element.status }}</span>
+          <span [ngClass]="getStatusClass(element.status)">{{
+            element.status
+          }}</span>
         </td>
       </ng-container>
 
-     <!-- Actions Column -->
+      <!-- Actions Column -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
@@ -61,7 +87,7 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="editUser(element)">
+            <button mat-menu-item (click)="editPartenaire(element)">
               <mat-icon>edit</mat-icon>
               <span>Modifier</span>
             </button>
@@ -70,8 +96,12 @@
               <span>Supprimer</span>
             </button>
             <button mat-menu-item (click)="toggleUserStatus(element)">
-              <mat-icon>{{ element.status === 'Actif' ? 'block' : 'check_circle' }}</mat-icon>
-              <span>{{ element.status === 'Actif' ? 'Désactiver' : 'Activer' }}</span>
+              <mat-icon>{{
+                element.status === "Actif" ? "block" : "check_circle"
+              }}</mat-icon>
+              <span>{{
+                element.status === "Actif" ? "Désactiver" : "Activer"
+              }}</span>
             </button>
           </mat-menu>
         </td>
@@ -84,5 +114,10 @@
   </div>
 
   <!-- Paginator -->
-  <mat-paginator [length]="users.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" aria-label="Select page"></mat-paginator>
+  <mat-paginator
+    [length]="partenaire.length"
+    [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Select page"
+  ></mat-paginator>
 </div>
