--- a/KalanSageFront/k-admin/src/app/pages/3-Module/module.component.scss
+++ b/KalanSageFront/k-admin/src/app/pages/3-Module/module.component.scss
@@ -40,7 +40,7 @@
   }
 
   .module-card-content {
-    background-color: #e2dddd50;
+    background-color: #fff;
     color: var(--primary-color);
     border-radius: 12px;
     overflow: hidden;
@@ -105,4 +105,8 @@
 }
 .mat-toolbar{
   background: #fff;
+}
+.module-image {
+  object-fit: cover;
+  height: 80px; 
 }
